refactor auth user
