# public/swagger.json
@@ -15,6 +15,10 @@
       "description": "User authentication"
     },
     {
+      "name": "user",
+      "description": "get user"
+    },
+    {
       "name": "users",
       "description": "Users"
     },
@@ -385,7 +389,7 @@
     "/auth/user": {
       "get": {
         "tags": [
-          "auth"
+          "user"
         ],
         "security": [
           {
@@ -406,6 +410,168 @@
             "schema": {
               "type": "object",
               "$ref": "#/definitions/User"
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "user"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "update current user",
+        "operationId": "auth-update-user",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Павел Костюк"
+                },
+                "avatar_url": {
+                  "type": "string",
+                  "example": "https://lh5.googleusercontent.com/-CMSrZzpBle0/AAAAAAAAAAI/AAAAAAAAAGY/fg4fG1dIPr4/s96-c/photo.jpg"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/User"
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          }
+        }
+      }
+    },
+    "/auth/user/account": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "current user account",
+        "operationId": "auth-user-account",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/Account"
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "user"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "update current user account",
+        "operationId": "auth-update-user-account",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Павел Костюк"
+                },
+                "avatar_url": {
+                  "type": "string",
+                  "example": "https://lh5.googleusercontent.com/-CMSrZzpBle0/AAAAAAAAAAI/AAAAAAAAAGY/fg4fG1dIPr4/s96-c/photo.jpg"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/Account"
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          }
+        }
+      }
+    },
+    "/auth/user/socials": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "current user socials",
+        "operationId": "auth-user-socials",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Social"
+              }
             }
           },
           "401": {
@@ -1894,6 +2060,68 @@
         "is_active": {
           "type": "boolean",
           "default": true
+        },
+        "created_at": {
+          "type": "string",
+          "example": "2014-06-26 04:07:31"
+        },
+        "updated_at": {
+          "type": "string",
+          "example": "2014-06-26 04:07:31"
+        }
+      }
+    },
+    "Account": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        },
+        "user_id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        },
+        "facebook": {
+          "type": "string",
+          "example": "https://www.facebook.com/kostyk.pavel"
+        },
+        "instagram": {
+          "type": "string",
+          "example": "https://www.instagram.com/pavliha/"
+        },
+        "created_at": {
+          "type": "string",
+          "example": "2014-06-26 04:07:31"
+        },
+        "updated_at": {
+          "type": "string",
+          "example": "2014-06-26 04:07:31"
+        }
+      }
+    },
+    "Social": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        },
+        "user_id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        },
+        "provider": {
+          "type": "string",
+          "example": "facebook"
+        },
+        "provider_id": {
+          "type": "string",
+          "example": "34523624724"
         },
         "created_at": {
           "type": "string",
